add(infrastructure): Dockerfile, and miscellaneous amends

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ long_description = file:long_description.rst
 long_description_content_type = text/x-rst; charset=UTF-8
 license = Apache-2.0
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 2 - Pre-Alpha
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Image Recognition
     License :: OSI Approved :: BSD License
@@ -25,15 +25,15 @@ setup_requires =
     numpy
     cython
 install_requires =
-    niworkflows >=0.9.3,<0.10.0a0
-    templateflow >=0.1.3,<0.2.0a0
     nibabel >=2.2.1
     nipype >=1.2.0
-    pybids >=0.7.1,<0.8.0a0
+    niworkflows >=0.9.3,<0.10.0a0
     numpy
+    pybids >=0.7.1,<0.8.0a0
+    templateflow >=0.1.3,<0.2.0a0
 test_requires =
-    coverage
     codecov
+    coverage
     pytest
 packages = find:
 include_package_data = True
@@ -58,7 +58,7 @@ tests =
     pytest
 all =
     %(doc)s
-    %(tests)
+    %(tests)s
 
 [options.package_data]
 sdcflows =
