--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,9 +150,19 @@ workflows:
             tags:
               only: /.*/
 
+      - deploy_pypi:
+          requires:
+            - build
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /.*/
+
       - deploy_docker:
           requires:
             - build
+            - deploy_pypi
           filters:
             branches:
               ignore: /.*/
