--- a/setup.cfg
+++ b/setup.cfg
@@ -22,15 +22,13 @@ classifiers =
 python_requires = >=3.5
 setup_requires =
     setuptools >=40.8
-    numpy
-    cython
 install_requires =
     nibabel >=2.2.1
     nipype >=1.2.0
-    niworkflows >=0.9.5,<0.10.0a0
+    niworkflows ~=0.10
     numpy
-    pybids >=0.7.1,<0.8.0a0
-    templateflow >=0.3.0,<0.4.0a0
+    pybids ~=0.9.2
+    templateflow ~= 0.4
 test_requires =
     codecov
     coverage
