ENH: Set-up testing framework
Close #1.

Opening the way for #6.

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,9 +51,10 @@ doc =
 docs =
     %(doc)s
 tests =
-    coverage
-    codecov
     pytest
+    pytest-xdist
+    pytest-cov == 2.5.1
+    coverage
 all =
     %(doc)s
     %(tests)s
