--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = code@oscaresteban.es
 maintainer = Oscar Esteban
 maintainer_email = code@oscaresteban.es
 description = Susceptibility Distortion Correction (SDC) workflows for EPI MR schemes.
-long_description = file:long_description.rst
+long_description = file:README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
 license = Apache-2.0
 classifiers =
