fix: add pytest config to ``setup.cfg``

--- a/setup.cfg
+++ b/setup.cfg
@@ -86,3 +86,12 @@ putty-ignore =
     */__init__.py : +F401
     docs/conf.py : +E265
     /^\s*\.\. _.*?: http/ : +E501
+
+[tool:pytest]
+norecursedirs = .git
+addopts = -svx --doctest-modules
+doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
+env =
+    PYTHONHASHSEED=0
+filterwarnings =
+    ignore::DeprecationWarning
