--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ setup_requires =
     setuptools >=40.8
 install_requires =
     nibabel >=2.2.1
-    nipype >=1.2.0
+    nipype >=1.2.0,!=1.2.3
     niflow-nipype1-workflows ~=0.0.1
     niworkflows ~=0.10
     numpy
