MAINT: Fix dependency of ``deploy_pypi`` in the CircleCI workflow [skip ci]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -353,6 +353,7 @@ workflows:
           requires:
             - build
             - test_package
+            - test_sdcflows
           filters:
             branches:
               ignore: /.*/
