--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
+docs/_build
+docs/api
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
