--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     nibabel >=2.2.1
     niflow-nipype1-workflows ~= 0.0.1
     nipype >=1.3.0rc1
-    niworkflows ~=0.10
+    niworkflows ~= 1.0.0rc1
     numpy
     pybids ~=0.9.2
     templateflow ~= 0.4
@@ -42,13 +42,13 @@ include_package_data = True
 
 [options.extras_require]
 doc =
-    nbsphinx
-    packaging
-    pydot >=1.2.3
+    sphinx >= 2.1.2
+    pydot >= 1.2.3
     pydotplus
-    sphinx >=1.5.3
-    sphinx-argparse
+    sphinx-versioning
     sphinx_rtd_theme
+    sphinxcontrib-apidoc ~= 0.3.0
+    sphinxcontrib-napoleon
 docs =
     %(doc)s
 tests =
