DOC: Build API documentation [doc versions]

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,13 +42,13 @@ include_package_data = True
 
 [options.extras_require]
 doc =
-    nbsphinx
-    packaging
-    pydot >=1.2.3
+    sphinx >= 2.1.2
+    pydot >= 1.2.3
     pydotplus
-    sphinx >=1.5.3
-    sphinx-argparse
+    sphinx-versioning
     sphinx_rtd_theme
+    sphinxcontrib-apidoc ~= 0.3.0
+    sphinxcontrib-napoleon
 docs =
     %(doc)s
 tests =
