--- a/setup.cfg
+++ b/setup.cfg
@@ -45,10 +45,10 @@ doc =
     sphinx >= 2.1.2
     pydot >= 1.2.3
     pydotplus
-    sphinx-versioning
     sphinx_rtd_theme
     sphinxcontrib-apidoc ~= 0.3.0
     sphinxcontrib-napoleon
+    sphinxcontrib-versioning
 docs =
     %(doc)s
 tests =
