--- a/setup.cfg
+++ b/setup.cfg
@@ -81,8 +81,11 @@ parentdir_prefix =
 
 [flake8]
 max-line-length = 99
-doctests = True
-exclude=*build/
+doctests = False
+exclude = 
+    *build/
+    docs/sphinxext/
+    docs/tools/
 putty-ignore =
     */__init__.py : +F401
     docs/conf.py : +E265
