--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,17 @@ docs_deploy: &docs
         fingerprints:
           - "46:48:1e:6d:00:0e:f2:f8:e5:aa:b9:aa:da:eb:59:4e"
     - run:
-        name: Install and configure dependencies
+        name: Install gh-pages tool
         command: |
           npm install -g --silent gh-pages@2.0.1
           git config user.email "crn.poldracklab@gmail.com"
           git config user.name "Documentation Push"
     - checkout
+    - run:
+        name: Set git settings
+        command: |
+          git config user.email "crn.poldracklab@gmail.com"
+          git config user.name "Documentation Push"
     - attach_workspace:
         at: docs/_build
     - run:
