--- a/setup.cfg
+++ b/setup.cfg
@@ -94,9 +94,12 @@ putty-ignore =
 
 [tool:pytest]
 norecursedirs = .git
-addopts = -svx --doctest-modules
+addopts = -vsx --doctest-modules
 doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
 env =
     PYTHONHASHSEED=0
 filterwarnings =
     ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore:cmp not installed:UserWarning
+    ignore:This has not been fully tested:UserWarning
