--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     nibabel >=2.2.1
     niflow-nipype1-workflows ~= 0.0.1
     nipype >=1.3.0rc1
-    niworkflows ~=0.10
+    niworkflows ~= 1.0.0rc1
     numpy
     pybids ~=0.9.2
     templateflow ~= 0.4
