--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     nibabel >=2.3
     niflow-nipype1-workflows ~= 0.0.1
     nipype >= 1.3.1
-    niworkflows @ git+https://github.com/poldracklab/niworkflows.git@4b310a139356f7cfed6e40b299ced9fecfe3daf0
+    niworkflows ~= 1.1.1
     numpy
     pybids ~=0.9.2
     templateflow ~= 0.4
