--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,8 +2,8 @@ git+https://github.com/AleksandarPetrov/napoleon.git@0dc3f28a309ad602be5f44a9049
 git+https://github.com/rwblair/sphinxcontrib-versioning.git@39b40b0b84bf872fc398feff05344051bbce0f63#egg=sphinxcontrib-versioning
 nbsphinx
 niflow-nipype1-workflows ~= 0.0.1
-nipype>=1.3.0rc1
-niworkflows ~= 1.0.0rc1
+nipype>=1.3.1
+niworkflows ~= 1.1.2
 packaging
 pydot>=1.2.3
 pydotplus
