--- a/setup.cfg
+++ b/setup.cfg
@@ -23,13 +23,13 @@ python_requires = >=3.5
 setup_requires =
     setuptools >=40.8
 install_requires =
-    nibabel >=2.3
+    nibabel >=3.0.0rc1
     niflow-nipype1-workflows ~= 0.0.1
-    nipype >= 1.3.1
-    niworkflows ~= 1.1.1
+    nipype >=1.3.1
+    niworkflows ~= 1.1.2
     numpy
-    pybids ~=0.9.2
-    templateflow ~= 0.4
+    pybids ~= 0.9.2
+    templateflow >=0.4
 test_requires =
     codecov
     coverage
