--- a/setup.cfg
+++ b/setup.cfg
@@ -23,10 +23,10 @@ python_requires = >=3.5
 setup_requires =
     setuptools >=40.8
 install_requires =
-    nibabel >=3.0.0rc1
+    nibabel >=2.4.1
     niflow-nipype1-workflows ~= 0.0.1
     nipype >=1.3.1
-    niworkflows ~= 1.1.2
+    niworkflows ~= 1.0.3
     numpy
     pybids ~= 0.9.2
     templateflow >=0.4
