--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,15 +55,10 @@ jobs:
       - run:
           name: Setup git-annex
           command: |
-            mkdir -p /tmp/cache
-            if [[ ! -e "/tmp/cache/git-annex-standalone.tar.gz" ]]; then
+            if [[ ! -d /usr/lib/git-annex.linux ]]; then
               wget -O- http://neuro.debian.net/lists/trusty.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
               apt-key adv --recv-keys --keyserver hkp://pool.sks-keyservers.net:80 0xA5D32F012649A5A9
               apt update && sudo apt-get install -y --no-install-recommends git-annex-standalone
-              mkdir -p /tmp/cache
-              tar czvf /tmp/cache/git-annex-standalone.tar.gz /usr/bin/git-annex /usr/bin/git-annex-shell /usr/lib/git-annex.linux
-            else
-              tar xzfv /tmp/cache/git-annex-standalone.tar.gz -C /
             fi
             git config --global user.name 'CRN'
             git config --global user.email 'crn.poldracklab@gmail.com'
@@ -77,6 +72,16 @@ jobs:
             python -c "from templateflow import api as tfapi; \
                        tfapi.get('MNI152NLin2009cAsym', resolution=2, desc='brain', suffix='mask'); \
                        tfapi.get('MNI152NLin2009cAsym', resolution=2, desc='fMRIPrep', suffix='boldref');"
+
+      - save_cache:
+         key: env-v1-{{ .Branch }}-{{ .BuildNum }}
+         paths:
+            - /tmp/cache/git-annex-standalone.tar.gz
+            - /usr/local/lib/python3.7/site-packages
+            - /usr/bin/git-annex
+            - /usr/bin/git-annex-shell
+            - /usr/lib/git-annex.linux
+
       - run:
           name: Install ds001600
           command: |
@@ -91,7 +96,17 @@ jobs:
                   -O testdata.zip "https://files.osf.io/v1/resources/9sy2a/providers/osfstorage/5d44b940bcd6d900198ed6be/?zip="
               unzip testdata.zip -d /tmp/data/testdata
             fi
+      - save_cache:
+         key: data-v2-{{ .Branch }}-{{ .BuildNum }}
+         paths:
+            - /tmp/data
+            - /tmp/templateflow
 
+      - restore_cache:
+          keys:
+            - freesurfer-v1-{{ .Branch }}-
+            - freesurfer-v1-master-
+            - freesurfer-v1-
       - run:
           name: Pull FreeSurfer down
           command: |
@@ -115,23 +130,12 @@ jobs:
                    --exclude='freesurfer/subjects/sample-*.mgz' \
                    --exclude='freesurfer/subjects/V1_average' \
                    --exclude='freesurfer/trctrain'
+              echo "b2VzdGViYW5Ac3RhbmZvcmQuZWR1CjMwNzU2CiAqQ1MzYkJ5VXMxdTVNCiBGU2kvUGJsejJxR1V3Cg==" | base64 -d > /tmp/freesurfer/license.txt
             fi
-      - run:
-          name: Store FreeSurfer license file
-          command: |
-            echo "b2VzdGViYW5Ac3RhbmZvcmQuZWR1CjMwNzU2CiAqQ1MzYkJ5VXMxdTVNCiBGU2kvUGJsejJxR1V3Cg==" | base64 -d > /tmp/freesurfer/license.txt
-
       - save_cache:
-         key: env-v1-{{ .Branch }}-{{ .BuildNum }}
+         key: freesurfer-v1-{{ .Branch }}-{{ .BuildNum }}
          paths:
-            - /tmp/cache/git-annex-standalone.tar.gz
-
-      - save_cache:
-         key: data-v2-{{ .Branch }}-{{ .BuildNum }}
-         paths:
-            - /tmp/data
             - /tmp/freesurfer
-            - /tmp/templateflow
 
   build_n_pytest:
     machine:
@@ -217,6 +221,11 @@ jobs:
          paths:
             - /tmp/docker
 
+      - restore_cache:
+          keys:
+            - freesurfer-v1-{{ .Branch }}-
+            - freesurfer-v1-master-
+            - freesurfer-v1-
       - restore_cache:
           keys:
             - data-v2-{{ .Branch }}-
